// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeaderSection Component Snapshots matches snapshot for unverified user 1`] = `
<RCTView
  ref={null}
  style={
    {
      "paddingBottom": 24,
      "paddingTop": 0,
      "position": "relative",
    }
  }
>
  <View
    data-colors="["#18181B","#27272A","#3F3F46"]"
    data-end="{"x":1,"y":1}"
    data-start="{"x":0,"y":0}"
    ref={null}
    style={
      {
        "borderBottomLeftRadius": 32,
        "borderBottomRightRadius": 32,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="linear-gradient"
  />
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "width": 36,
        }
      }
    />
  </RCTView>
  <RCTPressable
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "height": 120,
          "justifyContent": "center",
          "position": "relative",
          "width": 120,
        }
      }
    >
      <RCTView
        ref={null}
        style={
          {
            "backgroundColor": "#F59E0B",
            "borderRadius": 70,
            "height": 140,
            "opacity": 0.25,
            "position": "absolute",
            "shadowColor": "#DFFF00",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 20,
            "width": 140,
          }
        }
      />
      <RCTView
        height={120}
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        width={120}
      >
        <RCTView
          cx={60}
          cy={60}
          fill="transparent"
          r={58}
          ref={null}
          stroke="rgba(255,255,255,0.2)"
          strokeWidth={4}
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <RCTView
          height={120}
          ref={null}
          width={120}
        >
          <RCTView
            ref={null}
          >
            <RCTView
              id="trustGradient"
              ref={null}
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            >
              <RCTView
                offset="0%"
                ref={null}
                stopColor="#F59E0B"
              />
              <RCTView
                offset="100%"
                ref={null}
                stopColor="rgba(245, 158, 11, 0.4)"
              />
            </RCTView>
          </RCTView>
          <RCTView
            cx={60}
            cy={60}
            fill="transparent"
            r={58}
            ref={null}
            stroke="url(#trustGradient)"
            strokeDasharray={364.424747816416}
            strokeDashoffset={145.7698991265664}
            strokeLinecap="round"
            strokeWidth={4}
            transform="rotate(-90 60 60)"
          />
        </RCTView>
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 100,
            "height": 104,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "width": 104,
          }
        }
      >
        <RCTImage
          ref={null}
          source="avatar.jpg"
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
          testID="profile-avatar"
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F59E0B",
            "borderColor": "#FFFFFF",
            "borderRadius": 16,
            "borderWidth": 3,
            "bottom": 4,
            "elevation": 4,
            "height": 32,
            "justifyContent": "center",
            "position": "absolute",
            "right": 4,
            "shadowColor": "#DFFF00",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.8,
            "shadowRadius": 8,
            "width": 32,
          }
        }
      >
        <RCTText
          ref={null}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Satoshi-Medium",
              "fontSize": 11,
              "fontWeight": "700",
              "letterSpacing": 1,
              "lineHeight": 13,
              "textTransform": "uppercase",
            }
          }
          testID="RCTText"
        >
          60
        </RCTText>
      </RCTView>
    </RCTView>
  </RCTPressable>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "ClashDisplay-Semibold",
            "fontSize": 28,
            "fontWeight": "600",
            "letterSpacing": -0.5,
            "lineHeight": 35,
          }
        }
        testID="RCTText"
      >
        Test User
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <RCTText
        color="rgba(255,255,255,0.8)"
        name="map-marker-outline"
        ref={null}
        size={16}
        testID="RCTText"
      >
        map-marker-outline
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "color": "rgba(255,255,255,0.8)",
            "fontFamily": "Satoshi-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="RCTText"
      >
        Test City
      </RCTText>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "marginTop": 24,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "JetBrainsMono-Medium",
                "fontSize": 20,
                "fontWeight": "500",
                "letterSpacing": -0.5,
                "lineHeight": 20,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "color": "rgba(255,255,255,0.7)",
                "fontFamily": "Satoshi-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.3,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
            testID="RCTText"
          >
            Anlar
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "JetBrainsMono-Medium",
                "fontSize": 20,
                "fontWeight": "500",
                "letterSpacing": -0.5,
                "lineHeight": 20,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "color": "rgba(255,255,255,0.7)",
                "fontFamily": "Satoshi-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.3,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
            testID="RCTText"
          >
            Hediyeler
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "JetBrainsMono-Medium",
                "fontSize": 20,
                "fontWeight": "500",
                "letterSpacing": -0.5,
                "lineHeight": 20,
              }
            }
            testID="RCTText"
          >
            0%
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "color": "rgba(255,255,255,0.7)",
                "fontFamily": "Satoshi-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.3,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
            testID="RCTText"
          >
            Yanıt
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "position": "absolute",
        "right": 20,
        "top": 80,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTPressable
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      role="button"
      style={
        {
          "borderRadius": 22,
          "elevation": 4,
          "height": 44,
          "overflow": "hidden",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 8,
          "width": 44,
        }
      }
      testID="edit-button"
    >
      <RCTView
        data-intensity={30}
        data-tint="light"
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,0.2)",
            "borderColor": "rgba(255,255,255,0.3)",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
          }
        }
        testID="blur-view"
      >
        <RCTText
          color="#FFFFFF"
          name="pencil-outline"
          ref={null}
          size={20}
          testID="RCTText"
        >
          pencil-outline
        </RCTText>
      </RCTView>
    </RCTPressable>
  </RCTView>
</RCTView>
`;

exports[`ProfileHeaderSection Component Snapshots matches snapshot for verified user 1`] = `
<RCTView
  ref={null}
  style={
    {
      "paddingBottom": 24,
      "paddingTop": 0,
      "position": "relative",
    }
  }
>
  <View
    data-colors="["#18181B","#27272A","#3F3F46"]"
    data-end="{"x":1,"y":1}"
    data-start="{"x":0,"y":0}"
    ref={null}
    style={
      {
        "borderBottomLeftRadius": 32,
        "borderBottomRightRadius": 32,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="linear-gradient"
  />
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "width": 36,
        }
      }
    />
  </RCTView>
  <RCTPressable
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "height": 120,
          "justifyContent": "center",
          "position": "relative",
          "width": 120,
        }
      }
    >
      <RCTView
        ref={null}
        style={
          {
            "backgroundColor": "#E5E4E2",
            "borderRadius": 70,
            "height": 140,
            "opacity": 0.25,
            "position": "absolute",
            "shadowColor": "#DFFF00",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 20,
            "width": 140,
          }
        }
      />
      <RCTView
        height={120}
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        width={120}
      >
        <RCTView
          cx={60}
          cy={60}
          fill="transparent"
          r={58}
          ref={null}
          stroke="rgba(255,255,255,0.2)"
          strokeWidth={4}
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <RCTView
          height={120}
          ref={null}
          width={120}
        >
          <RCTView
            ref={null}
          >
            <RCTView
              id="trustGradient"
              ref={null}
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            >
              <RCTView
                offset="0%"
                ref={null}
                stopColor="#E5E4E2"
              />
              <RCTView
                offset="100%"
                ref={null}
                stopColor="rgba(229, 228, 226, 0.4)"
              />
            </RCTView>
          </RCTView>
          <RCTView
            cx={60}
            cy={60}
            fill="transparent"
            r={58}
            ref={null}
            stroke="url(#trustGradient)"
            strokeDasharray={364.424747816416}
            strokeDashoffset={36.44247478164159}
            strokeLinecap="round"
            strokeWidth={4}
            transform="rotate(-90 60 60)"
          />
        </RCTView>
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 100,
            "height": 104,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "width": 104,
          }
        }
      >
        <RCTImage
          ref={null}
          source="avatar.jpg"
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
          testID="profile-avatar"
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E5E4E2",
            "borderColor": "#FFFFFF",
            "borderRadius": 16,
            "borderWidth": 3,
            "bottom": 4,
            "elevation": 4,
            "height": 32,
            "justifyContent": "center",
            "position": "absolute",
            "right": 4,
            "shadowColor": "#DFFF00",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.8,
            "shadowRadius": 8,
            "width": 32,
          }
        }
      >
        <RCTText
          ref={null}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Satoshi-Medium",
              "fontSize": 11,
              "fontWeight": "700",
              "letterSpacing": 1,
              "lineHeight": 13,
              "textTransform": "uppercase",
            }
          }
          testID="RCTText"
        >
          90
        </RCTText>
      </RCTView>
    </RCTView>
  </RCTPressable>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "ClashDisplay-Semibold",
            "fontSize": 28,
            "fontWeight": "600",
            "letterSpacing": -0.5,
            "lineHeight": 35,
          }
        }
        testID="RCTText"
      >
        Test User
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "shadowColor": "#DFFF00",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 6,
          }
        }
      >
        <RCTText
          color="#DFFF00"
          name="check-decagram"
          ref={null}
          size={24}
          testID="RCTText"
        >
          check-decagram
        </RCTText>
      </RCTView>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <RCTText
        color="rgba(255,255,255,0.8)"
        name="map-marker-outline"
        ref={null}
        size={16}
        testID="RCTText"
      >
        map-marker-outline
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "color": "rgba(255,255,255,0.8)",
            "fontFamily": "Satoshi-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="RCTText"
      >
        Test City
      </RCTText>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "marginTop": 24,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "JetBrainsMono-Medium",
                "fontSize": 20,
                "fontWeight": "500",
                "letterSpacing": -0.5,
                "lineHeight": 20,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "color": "rgba(255,255,255,0.7)",
                "fontFamily": "Satoshi-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.3,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
            testID="RCTText"
          >
            Anlar
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "JetBrainsMono-Medium",
                "fontSize": 20,
                "fontWeight": "500",
                "letterSpacing": -0.5,
                "lineHeight": 20,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "color": "rgba(255,255,255,0.7)",
                "fontFamily": "Satoshi-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.3,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
            testID="RCTText"
          >
            Hediyeler
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "JetBrainsMono-Medium",
                "fontSize": 20,
                "fontWeight": "500",
                "letterSpacing": -0.5,
                "lineHeight": 20,
              }
            }
            testID="RCTText"
          >
            0%
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "color": "rgba(255,255,255,0.7)",
                "fontFamily": "Satoshi-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.3,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
            testID="RCTText"
          >
            Yanıt
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "position": "absolute",
        "right": 20,
        "top": 80,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTPressable
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      role="button"
      style={
        {
          "borderRadius": 22,
          "elevation": 4,
          "height": 44,
          "overflow": "hidden",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 8,
          "width": 44,
        }
      }
      testID="edit-button"
    >
      <RCTView
        data-intensity={30}
        data-tint="light"
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,0.2)",
            "borderColor": "rgba(255,255,255,0.3)",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
          }
        }
        testID="blur-view"
      >
        <RCTText
          color="#FFFFFF"
          name="pencil-outline"
          ref={null}
          size={20}
          testID="RCTText"
        >
          pencil-outline
        </RCTText>
      </RCTView>
    </RCTPressable>
  </RCTView>
</RCTView>
`;
